<resources>
    <string name="app_name">CookBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ready_string">Listo</string>
    <string name="go_back_string">Ir atrás</string>
    <string name="ingredients_string">Ingredientes</string>
    <string name="add_ingredient_string">Botón añadir ingrediente</string>
    <string name="ingredient_string">Ingrediente</string>
    <string name="quantity_string">Cantidad</string>
    <string name="recipe_name_string">Nombre de la receta</string>
    <string name="recipe_image_string">Imagen de la receta</string>
    <string name="recipe_string">Receta</string>
    <string name="categories_string">Categorías</string>
    <string name="add_recipe_step_string">botón añadir paso de receta</string>
    <string name="more_btn_string">Botón más opciones</string>
    <string name="my_profile_string">Mi perfil</string>
    <string name="save_string">Guardar</string>
    <string name="user_image_string">Imagen del usuario</string>
    <string name="name_string">Nombre</string>
    <string name="description_string">Descripción</string>
    <string name="follow_string">Seguir</string>
    <string name="recipes_string">Recetas</string>
    <string name="followers_string">Seguidores</string>
    <string name="following_string">Siguiendo</string>
    <string name="start_cooking_string">Empezar a cocinar!</string>
    <string name="comments_string">Comentarios</string>
    <string name="add_comment_string">Añadir comentario</string>
    <string name="create_account_string">Crear Cuenta</string>
    <string name="register_content_string">Registrate para encontrar tu proxima receta favorita</string>
    <string name="full_name_string">Nombre completo</string>
    <string name="email_string">Correo electronico</string>
    <string name="app_logo_string">Logo de la aplicación</string>
    <string name="password_string">Contraseña</string>
    <string name="already_account_string">¿Ya Tienes una cuenta?</string>
    <string name="login_string">Iniciar Sesión</string>
    <string name="create_account_btn_string">Botón de crear cuenta</string>
    <string name="finish_string">Finalizar</string>
    <string name="first_page_top_string">Recetas para todos</string>
    <string name="find_best_recipes_string">Encuentra las mejores recetas</string>
    <string name="lets_cooking_string">!Vamos a Cocinar!</string>
    <string name="lets_start_string">Empecemos!</string>
    <string name="star_icon_string">Icono de estrella</string>
    <string name="search_recipe_string">Buscar receta</string>
    <string name="filter_btn_string">Botón para filtrar</string>
    <string name="tendency_string">Tendencias</string>
    <string name="popular_profiles_string">Perfiles populares</string>
    <string name="dont_have_account_string">¿No Tienes una Cuenta?</string>
    <string name="notifications_string">Notificaciones</string>
    <string name="today_string">Hoy</string>
    <string name="previous_string">Anteriores</string>
    <string name="saved_recipes_string">Recetas guardadas</string>
    <string name="skip_string">Omitir</string>
    <string name="find_your_fav_recipe_string">Encuentra tu receta favorita</string>
    <string name="next_page_string">Siguiente pagina</string>
    <string name="find_best_recipe_string">Busca la mejor receta para tu comida</string>
    <string name="create_own_recipe_string">Crea tu propia receta</string>
    <string name="chef_image_string">Imagen de un chef</string>
    <string name="share_ideas_string">Comparte con los demás tus ideas</string>
    <string name="ingredient_image_string">Imagen del ingrediente</string>
    <string name="recipe_icon_string">Icono de receta</string>
    <string name="delete_btn_string">Botón de borrar</string>
    <string name="add_image_btn_string">Botón para añadir una imagen</string>
    <string name="recipe_step_img_string">Imagen del paso de la receta</string>
</resources>