<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ThirdInitFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="96dp"
            android:text="@string/create_own_recipe_string"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="300dp"
            android:layout_height="370dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/daily_activities_g698a2baf4_1920_1"
            android:contentDescription="@string/chef_image_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cartoon_gc6b1d9dec_1280_1" />

        <Button
            android:id="@+id/nextBtn"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="96dp"
            android:text="@string/next_page_string"
            android:textColor="@color/white"
            app:backgroundTint="@color/red_700"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/share_ideas_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>